--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <p>Desarrollado por el equipo de Olimpia Games</p>
     </footer>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="CSS/styles.css" />
+    <script src="SCRIPT/script.js"></script>
   </body>
 </html>
