--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
           </div>
 
           <div class="game-card">
-            <img
-              src="img/dota2.jpg"
-              alt="League of Legends"
-              class="game-image"
-            />
+            <img src="img/dota2.jpg" alt="Dota2" class="game-image"/>
             <div class="game-info">
               <h3 class="game-title">Dota 2</h3>
               <p>DOMINA EL JUEGO QUE DEFINE EL ESPORTS EN DOTA 2</p>
@@ -100,11 +96,7 @@
           </div>
 
           <div class="game-card">
-            <img
-              src="img/alegends.jpg"
-              alt="League of Legends"
-              class="game-image"
-            />
+            <img src="img/alegends.jpg" alt="Apex Legends" class="game-image"/>
             <div class="game-info">
               <h3 class="game-title">Apex Legends</h3>
               <p>¡BATTLE ROYALE ÉPICO! DOMINA LA ARENA CON ESTE JUEGO</p>
