--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
             <img src="img/fifa23.jpg" alt="FIFA 23" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">FIFA 23</h3>
-              <p>¡VIVE LA EMOCIÓN DEL FÚTBOL COMO NUNCA ANTES!</p>
-              <p class="game-price">$59.99</p>
+              <div class="game-description">
+                <p>¡VIVE LA EMOCIÓN DEL FÚTBOL COMO NUNCA ANTES!</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">$59.99</span>
+              </div>
             </div>
           </div>
 
@@ -45,8 +49,12 @@
             <img src="img/valorant.jpg" alt="Valorant" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">Valorant</h3>
-              <p>¡PRESICIÓN ESTRATEGIA Y HABILIDADES ÚNICAS!</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>¡PRESICIÓN ESTRATEGIA Y HABILIDADES ÚNICAS!</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">Gratuito</span>
+              </div>
             </div>
           </div>
 
@@ -54,8 +62,12 @@
             <img src="img/fortnite.jpg" alt="Fortnite" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">Fortnite</h3>
-              <p>¡EL JUEGO QUE LO TIENE TODO!</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>¡EL JUEGO QUE LO TIENE TODO!</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">Gratuito</span>
+              </div>
             </div>
           </div>
 
@@ -63,8 +75,12 @@
             <img src="img/calld.jpg" alt="Call of Duty" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">Call of Duty: Warzone</h3>
-              <p>¡VIVE LA EXPERIENCIA DEFINITIVA DE GUERRA MODERNA!</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>¡VIVE LA EXPERIENCIA DEFINITIVA DE GUERRA MODERNA!</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">Gratuito</span>
+              </div>
             </div>
           </div>
 
@@ -72,8 +88,12 @@
             <img src="img/lol.jpg" alt="League of Legends" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">League of Legends</h3>
-              <p>EL JUEGO COMPETITIVO MÁS POPULAR DEL MUNDO</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>EL JUEGO COMPETITIVO MÁS POPULAR DEL MUNDO</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">Gratuito</span>
+              </div>
             </div>
           </div>
 
@@ -81,26 +101,46 @@
             <img src="img/rocketl.jpg" alt="Rocket League" class="game-image" />
             <div class="game-info">
               <h3 class="game-title">Rocket League</h3>
-              <p>¡FÚTBOL CAÓTICO CON COCHES VOLADORES!</p>
-              <p class="game-price">$19.99</p>
+              <div class="game-description">
+                <p>¡FÚTBOL CAÓTICO CON COCHES VOLADORES!</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">$19.99</span>
+              </div>
             </div>
           </div>
 
           <div class="game-card">
-            <img src="img/dota2.jpg" alt="Dota2" class="game-image"/>
+            <img
+              src="img/dota2.jpg"
+              alt="League of Legends"
+              class="game-image"
+            />
             <div class="game-info">
               <h3 class="game-title">Dota 2</h3>
-              <p>DOMINA EL JUEGO QUE DEFINE EL ESPORTS EN DOTA 2</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>DOMINA EL JUEGO QUE DEFINE EL ESPORTS EN DOTA 2</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">$59.99</span>
+              </div>
             </div>
           </div>
 
           <div class="game-card">
-            <img src="img/alegends.jpg" alt="Apex Legends" class="game-image"/>
+            <img
+              src="img/alegends.jpg"
+              alt="League of Legends"
+              class="game-image"
+            />
             <div class="game-info">
               <h3 class="game-title">Apex Legends</h3>
-              <p>¡BATTLE ROYALE ÉPICO! DOMINA LA ARENA CON ESTE JUEGO</p>
-              <p class="game-price">Gratuito</p>
+              <div class="game-description">
+                <p>¡BATTLE ROYALE ÉPICO! DOMINA LA ARENA CON ESTE JUEGO</p>
+              </div>
+              <div class="game-price-container">
+                <span class="game-price">Gratuito</span>
+              </div>
             </div>
           </div>
         </div>
